--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -81,6 +81,15 @@ en:
     event_type_resource component transfer: Resource Component Transfer
     event_type_validation: Validation
     event_type_virus check: Virus Check
+  deaccession:
+    whole_part: Whole (or Part)
+    description: Description
+    reason: Reason
+    disposition: Disposition
+    notification: Notification Given?
+    _html:
+      plural: Deaccessions
+      singular: Deaccession
   agent_person_name:
     authority_id: Authority ID
     source: Source
