--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -287,6 +287,7 @@ en:
       agent_person: Person
       agent_corporate_entity: Corporate Entity
       agent_software: Software
+    names: Names
     _names:
       authority_id: Authority ID
       primary_name: Primary Name
