prototype of export file download in rails ui

--- a/migrations/TODO.txt
+++ b/migrations/TODO.txt
@@ -1,4 +1,4 @@
-- Add JSONValidation Exceptions to the report, send to rails flash
+- Add rescued JSONValidation Exceptions to the report, send to rails flash
 
 - hook up agents to archival objects and resources on import
 
