Create a general partial and javascript for the tree widget (have only applied to resources currently)

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -462,6 +462,9 @@ en:
       <<: *external_document_attributes
     _rights_statements:
       <<: *rights_statement_attributes
+    _html:
+      singular: Archival Object
+      plural: Archival Objects
   group:
     group_code: Group code
     description: Description
