Refactor digital object tree to use shared widget; Change update_tree to simply update the node's parent (drag and drop reorder);

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -26,6 +26,9 @@ en:
     component_id: Identifier
     publish: Publish
     language: Language
+    _html:
+      singular: Digital Object Component
+      plural: Digital Object Components
   location:
     temporary: Temporary
     temporary_conservation: Conservation
