Add ref_id to resource (it is optional but must be unique for the repository); also make identifier optional for resource;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -483,6 +483,7 @@ en:
     "[:id_0, :id_1, :id_2, :id_3]": Identifier
     "[:repo_id, :identifier]": Identifier
     identifier: Identifier
+    ref_id: Ref ID
     extents: Extents
     _extents:
       <<: *extent_attributes
