--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -495,6 +495,9 @@ en:
       <<: *rights_statement_attributes
     _instances:
       <<: *instance_attributes
+    _html:
+      singular: Resource
+      plural: Resources
   repository:
     repo_code: Repository code
     description: Description
