Remove 'expression' as a date type and make it a field parallel to the other date_types. Date 'expression' is optional, but if provided, a date_type becomes optional. Fix linked records throwing an exception if 'ref' was nil.  Also refactored the linker widget to set an ID on the element, to support error messages.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -70,6 +70,7 @@ en:
     role_source: Source
     role_outcome: Outcome
     role_transfer: Transfer
+    ref: Record
     _html:
       singular: Record Link
       plural: Record Links
@@ -380,6 +381,12 @@ en:
     _html:
       plural: Dates
       singular: Date
+  date_type_single:
+    <<: *date_attributes
+  date_type_bulk:
+    <<: *date_attributes
+  date_type_inclusive:
+    <<: *date_attributes
   accession:
     accession_date: Accession Date
     accession_id: Identifier
