Add basic language vocab and #language property to accessions

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1,4 +1,490 @@
 en:
+  language: &language_attributes
+    language_aar: Afar
+    language_abk: Abkhazian
+    language_ace: Achinese
+    language_ach: Acoli
+    language_ada: Adangme
+    language_ady: Adyghe; Adygei
+    language_afa: Afro-Asiatic languages
+    language_afh: Afrihili
+    language_afr: Afrikaans
+    language_ain: Ainu
+    language_aka: Akan
+    language_akk: Akkadian
+    language_alb: Albanian
+    language_ale: Aleut
+    language_alg: Algonquian languages
+    language_alt: Southern Altai
+    language_amh: Amharic
+    language_ang: English, Old (ca.450-1100)
+    language_anp: Angika
+    language_apa: Apache languages
+    language_ara: Arabic
+    language_arc: Official Aramaic (700-300 BCE); Imperial Aramaic (700-300 BCE)
+    language_arg: Aragonese
+    language_arm: Armenian
+    language_arn: Mapudungun; Mapuche
+    language_arp: Arapaho
+    language_art: Artificial languages
+    language_arw: Arawak
+    language_asm: Assamese
+    language_ast: Asturian; Bable; Leonese; Asturleonese
+    language_ath: Athapascan languages
+    language_aus: Australian languages
+    language_ava: Avaric
+    language_ave: Avestan
+    language_awa: Awadhi
+    language_aym: Aymara
+    language_aze: Azerbaijani
+    language_bad: Banda languages
+    language_bai: Bamileke languages
+    language_bak: Bashkir
+    language_bal: Baluchi
+    language_bam: Bambara
+    language_ban: Balinese
+    language_baq: Basque
+    language_bas: Basa
+    language_bat: Baltic languages
+    language_bej: Beja; Bedawiyet
+    language_bel: Belarusian
+    language_bem: Bemba
+    language_ben: Bengali
+    language_ber: Berber languages
+    language_bho: Bhojpuri
+    language_bih: Bihari languages
+    language_bik: Bikol
+    language_bin: Bini; Edo
+    language_bis: Bislama
+    language_bla: Siksika
+    language_bnt: Bantu (Other)
+    language_bos: Bosnian
+    language_bra: Braj
+    language_bre: Breton
+    language_btk: Batak languages
+    language_bua: Buriat
+    language_bug: Buginese
+    language_bul: Bulgarian
+    language_bur: Burmese
+    language_byn: Blin; Bilin
+    language_cad: Caddo
+    language_cai: Central American Indian languages
+    language_car: Galibi Carib
+    language_cat: Catalan; Valencian
+    language_cau: Caucasian languages
+    language_ceb: Cebuano
+    language_cel: Celtic languages
+    language_cha: Chamorro
+    language_chb: Chibcha
+    language_che: Chechen
+    language_chg: Chagatai
+    language_chi: Chinese
+    language_chk: Chuukese
+    language_chm: Mari
+    language_chn: Chinook jargon
+    language_cho: Choctaw
+    language_chp: Chipewyan; Dene Suline
+    language_chr: Cherokee
+    language_chu: Church Slavic; Old Slavonic; Church Slavonic; Old Bulgarian; Old Church Slavonic
+    language_chv: Chuvash
+    language_chy: Cheyenne
+    language_cmc: Chamic languages
+    language_cop: Coptic
+    language_cor: Cornish
+    language_cos: Corsican
+    language_cpe: Creoles and pidgins, English based
+    language_cpf: Creoles and pidgins, French-based
+    language_cpp: Creoles and pidgins, Portuguese-based
+    language_cre: Cree
+    language_crh: Crimean Tatar; Crimean Turkish
+    language_crp: Creoles and pidgins
+    language_csb: Kashubian
+    language_cus: Cushitic languages
+    language_cze: Czech
+    language_dak: Dakota
+    language_dan: Danish
+    language_dar: Dargwa
+    language_day: Land Dayak languages
+    language_del: Delaware
+    language_den: Slave (Athapascan)
+    language_dgr: Dogrib
+    language_din: Dinka
+    language_div: Divehi; Dhivehi; Maldivian
+    language_doi: Dogri
+    language_dra: Dravidian languages
+    language_dsb: Lower Sorbian
+    language_dua: Duala
+    language_dum: Dutch, Middle (ca.1050-1350)
+    language_dut: Dutch; Flemish
+    language_dyu: Dyula
+    language_dzo: Dzongkha
+    language_efi: Efik
+    language_egy: Egyptian (Ancient)
+    language_eka: Ekajuk
+    language_elx: Elamite
+    language_eng: English
+    language_enm: English, Middle (1100-1500)
+    language_epo: Esperanto
+    language_est: Estonian
+    language_ewe: Ewe
+    language_ewo: Ewondo
+    language_fan: Fang
+    language_fao: Faroese
+    language_fat: Fanti
+    language_fij: Fijian
+    language_fil: Filipino; Pilipino
+    language_fin: Finnish
+    language_fiu: Finno-Ugrian languages
+    language_fon: Fon
+    language_fre: French
+    language_frm: French, Middle (ca.1400-1600)
+    language_fro: French, Old (842-ca.1400)
+    language_frr: Northern Frisian
+    language_frs: Eastern Frisian
+    language_fry: Western Frisian
+    language_ful: Fulah
+    language_fur: Friulian
+    language_gaa: Ga
+    language_gay: Gayo
+    language_gba: Gbaya
+    language_gem: Germanic languages
+    language_geo: Georgian
+    language_ger: German
+    language_gez: Geez
+    language_gil: Gilbertese
+    language_gla: Gaelic; Scottish Gaelic
+    language_gle: Irish
+    language_glg: Galician
+    language_glv: Manx
+    language_gmh: German, Middle High (ca.1050-1500)
+    language_goh: German, Old High (ca.750-1050)
+    language_gon: Gondi
+    language_gor: Gorontalo
+    language_got: Gothic
+    language_grb: Grebo
+    language_grc: Greek, Ancient (to 1453)
+    language_gre: Greek, Modern (1453-)
+    language_grn: Guarani
+    language_gsw: Swiss German; Alemannic; Alsatian
+    language_guj: Gujarati
+    language_gwi: Gwich'in
+    language_hai: Haida
+    language_hat: Haitian; Haitian Creole
+    language_hau: Hausa
+    language_haw: Hawaiian
+    language_heb: Hebrew
+    language_her: Herero
+    language_hil: Hiligaynon
+    language_him: Himachali languages; Western Pahari languages
+    language_hin: Hindi
+    language_hit: Hittite
+    language_hmn: Hmong; Mong
+    language_hmo: Hiri Motu
+    language_hrv: Croatian
+    language_hsb: Upper Sorbian
+    language_hun: Hungarian
+    language_hup: Hupa
+    language_iba: Iban
+    language_ibo: Igbo
+    language_ice: Icelandic
+    language_ido: Ido
+    language_iii: Sichuan Yi; Nuosu
+    language_ijo: Ijo languages
+    language_iku: Inuktitut
+    language_ile: Interlingue; Occidental
+    language_ilo: Iloko
+    language_ina: Interlingua (International Auxiliary Language Association)
+    language_inc: Indic languages
+    language_ind: Indonesian
+    language_ine: Indo-European languages
+    language_inh: Ingush
+    language_ipk: Inupiaq
+    language_ira: Iranian languages
+    language_iro: Iroquoian languages
+    language_ita: Italian
+    language_jav: Javanese
+    language_jbo: Lojban
+    language_jpn: Japanese
+    language_jpr: Judeo-Persian
+    language_jrb: Judeo-Arabic
+    language_kaa: Kara-Kalpak
+    language_kab: Kabyle
+    language_kac: Kachin; Jingpho
+    language_kal: Kalaallisut; Greenlandic
+    language_kam: Kamba
+    language_kan: Kannada
+    language_kar: Karen languages
+    language_kas: Kashmiri
+    language_kau: Kanuri
+    language_kaw: Kawi
+    language_kaz: Kazakh
+    language_kbd: Kabardian
+    language_kha: Khasi
+    language_khi: Khoisan languages
+    language_khm: Central Khmer
+    language_kho: Khotanese; Sakan
+    language_kik: Kikuyu; Gikuyu
+    language_kin: Kinyarwanda
+    language_kir: Kirghiz; Kyrgyz
+    language_kmb: Kimbundu
+    language_kok: Konkani
+    language_kom: Komi
+    language_kon: Kongo
+    language_kor: Korean
+    language_kos: Kosraean
+    language_kpe: Kpelle
+    language_krc: Karachay-Balkar
+    language_krl: Karelian
+    language_kro: Kru languages
+    language_kru: Kurukh
+    language_kua: Kuanyama; Kwanyama
+    language_kum: Kumyk
+    language_kur: Kurdish
+    language_kut: Kutenai
+    language_lad: Ladino
+    language_lah: Lahnda
+    language_lam: Lamba
+    language_lao: Lao
+    language_lat: Latin
+    language_lav: Latvian
+    language_lez: Lezghian
+    language_lim: Limburgan; Limburger; Limburgish
+    language_lin: Lingala
+    language_lit: Lithuanian
+    language_lol: Mongo
+    language_loz: Lozi
+    language_ltz: Luxembourgish; Letzeburgesch
+    language_lua: Luba-Lulua
+    language_lub: Luba-Katanga
+    language_lug: Ganda
+    language_lui: Luiseno
+    language_lun: Lunda
+    language_luo: Luo (Kenya and Tanzania)
+    language_lus: Lushai
+    language_mac: Macedonian
+    language_mad: Madurese
+    language_mag: Magahi
+    language_mah: Marshallese
+    language_mai: Maithili
+    language_mak: Makasar
+    language_mal: Malayalam
+    language_man: Mandingo
+    language_mao: Maori
+    language_map: Austronesian languages
+    language_mar: Marathi
+    language_mas: Masai
+    language_may: Malay
+    language_mdf: Moksha
+    language_mdr: Mandar
+    language_men: Mende
+    language_mga: Irish, Middle (900-1200)
+    language_mic: Mi'kmaq; Micmac
+    language_min: Minangkabau
+    language_mis: Uncoded languages
+    language_mkh: Mon-Khmer languages
+    language_mlg: Malagasy
+    language_mlt: Maltese
+    language_mnc: Manchu
+    language_mni: Manipuri
+    language_mno: Manobo languages
+    language_moh: Mohawk
+    language_mon: Mongolian
+    language_mos: Mossi
+    language_mul: Multiple languages
+    language_mun: Munda languages
+    language_mus: Creek
+    language_mwl: Mirandese
+    language_mwr: Marwari
+    language_myn: Mayan languages
+    language_myv: Erzya
+    language_nah: Nahuatl languages
+    language_nai: North American Indian languages
+    language_nap: Neapolitan
+    language_nau: Nauru
+    language_nav: Navajo; Navaho
+    language_nbl: Ndebele, South; South Ndebele
+    language_nde: Ndebele, North; North Ndebele
+    language_ndo: Ndonga
+    language_nds: Low German; Low Saxon; German, Low; Saxon, Low
+    language_nep: Nepali
+    language_new: Nepal Bhasa; Newari
+    language_nia: Nias
+    language_nic: Niger-Kordofanian languages
+    language_niu: Niuean
+    language_nno: Norwegian Nynorsk; Nynorsk, Norwegian
+    language_nob: Bokm'e5l, Norwegian; Norwegian Bokm'e5l
+    language_nog: Nogai
+    language_non: Norse, Old
+    language_nor: Norwegian
+    language_nqo: N'Ko
+    language_nso: Pedi; Sepedi; Northern Sotho
+    language_nub: Nubian languages
+    language_nwc: Classical Newari; Old Newari; Classical Nepal Bhasa
+    language_nya: Chichewa; Chewa; Nyanja
+    language_nym: Nyamwezi
+    language_nyn: Nyankole
+    language_nyo: Nyoro
+    language_nzi: Nzima
+    language_oci: Occitan (post 1500); Proven'e7al
+    language_oji: Ojibwa
+    language_ori: Oriya
+    language_orm: Oromo
+    language_osa: Osage
+    language_oss: Ossetian; Ossetic
+    language_ota: Turkish, Ottoman (1500-1928)
+    language_oto: Otomian languages
+    language_paa: Papuan languages
+    language_pag: Pangasinan
+    language_pal: Pahlavi
+    language_pam: Pampanga; Kapampangan
+    language_pan: Panjabi; Punjabi
+    language_pap: Papiamento
+    language_pau: Palauan
+    language_peo: Persian, Old (ca.600-400 B.C.)
+    language_per: Persian
+    language_phi: Philippine languages
+    language_phn: Phoenician
+    language_pli: Pali
+    language_pol: Polish
+    language_pon: Pohnpeian
+    language_por: Portuguese
+    language_pra: Prakrit languages
+    language_pro: Proven'e7al, Old (to 1500)
+    language_pus: Pushto; Pashto
+    language_qaa-qtz: Reserved for local use
+    language_que: Quechua
+    language_raj: Rajasthani
+    language_rap: Rapanui
+    language_rar: Rarotongan; Cook Islands Maori
+    language_roa: Romance languages
+    language_roh: Romansh
+    language_rom: Romany
+    language_rum: Romanian; Moldavian; Moldovan
+    language_run: Rundi
+    language_rup: Aromanian; Arumanian; Macedo-Romanian
+    language_rus: Russian
+    language_sad: Sandawe
+    language_sag: Sango
+    language_sah: Yakut
+    language_sai: South American Indian (Other)
+    language_sal: Salishan languages
+    language_sam: Samaritan Aramaic
+    language_san: Sanskrit
+    language_sas: Sasak
+    language_sat: Santali
+    language_scn: Sicilian
+    language_sco: Scots
+    language_sel: Selkup
+    language_sem: Semitic languages
+    language_sga: Irish, Old (to 900)
+    language_sgn: Sign Languages
+    language_shn: Shan
+    language_sid: Sidamo
+    language_sin: Sinhala; Sinhalese
+    language_sio: Siouan languages
+    language_sit: Sino-Tibetan languages
+    language_sla: Slavic languages
+    language_slo: Slovak
+    language_slv: Slovenian
+    language_sma: Southern Sami
+    language_sme: Northern Sami
+    language_smi: Sami languages
+    language_smj: Lule Sami
+    language_smn: Inari Sami
+    language_smo: Samoan
+    language_sms: Skolt Sami
+    language_sna: Shona
+    language_snd: Sindhi
+    language_snk: Soninke
+    language_sog: Sogdian
+    language_som: Somali
+    language_son: Songhai languages
+    language_sot: Sotho, Southern
+    language_spa: Spanish; Castilian
+    language_srd: Sardinian
+    language_srn: Sranan Tongo
+    language_srp: Serbian
+    language_srr: Serer
+    language_ssa: Nilo-Saharan languages
+    language_ssw: Swati
+    language_suk: Sukuma
+    language_sun: Sundanese
+    language_sus: Susu
+    language_sux: Sumerian
+    language_swa: Swahili
+    language_swe: Swedish
+    language_syc: Classical Syriac
+    language_syr: Syriac
+    language_tah: Tahitian
+    language_tai: Tai languages
+    language_tam: Tamil
+    language_tat: Tatar
+    language_tel: Telugu
+    language_tem: Timne
+    language_ter: Tereno
+    language_tet: Tetum
+    language_tgk: Tajik
+    language_tgl: Tagalog
+    language_tha: Thai
+    language_tib: Tibetan
+    language_tig: Tigre
+    language_tir: Tigrinya
+    language_tiv: Tiv
+    language_tkl: Tokelau
+    language_tlh: Klingon; tlhIngan-Hol
+    language_tli: Tlingit
+    language_tmh: Tamashek
+    language_tog: Tonga (Nyasa)
+    language_ton: Tonga (Tonga Islands)
+    language_tpi: Tok Pisin
+    language_tsi: Tsimshian
+    language_tsn: Tswana
+    language_tso: Tsonga
+    language_tuk: Turkmen
+    language_tum: Tumbuka
+    language_tup: Tupi languages
+    language_tur: Turkish
+    language_tut: Altaic languages
+    language_tvl: Tuvalu
+    language_twi: Twi
+    language_tyv: Tuvinian
+    language_udm: Udmurt
+    language_uga: Ugaritic
+    language_uig: Uighur; Uyghur
+    language_ukr: Ukrainian
+    language_umb: Umbundu
+    language_und: Undetermined
+    language_urd: Urdu
+    language_uzb: Uzbek
+    language_vai: Vai
+    language_ven: Venda
+    language_vie: Vietnamese
+    language_vol: Volap'fck
+    language_vot: Votic
+    language_wak: Wakashan languages
+    language_wal: Walamo
+    language_war: Waray
+    language_was: Washo
+    language_wel: Welsh
+    language_wen: Sorbian languages
+    language_wln: Walloon
+    language_wol: Wolof
+    language_xal: Kalmyk; Oirat
+    language_xho: Xhosa
+    language_yao: Yao
+    language_yap: Yapese
+    language_yid: Yiddish
+    language_yor: Yoruba
+    language_ypk: Yupik languages
+    language_zap: Zapotec
+    language_zbl: Blissymbols; Blissymbolics; Bliss
+    language_zen: Zenaga
+    language_zha: Zhuang; Chuang
+    language_znd: Zande languages
+    language_zul: Zulu
+    language_zun: Zuni
+    language_zxx: No linguistic content; Not applicable
+    language_zza: Zaza; Dimili; Dimli; Kirdki; Kirmanjki; Zazaki
   digital_object:
     title: Title
     digital_object_id: Identifier
@@ -397,6 +883,8 @@ en:
     publish_help: Check this if you wish to publish this accession to the public.
     restrictions: Restrictions?
     title: Title
+    language: Language
+    <<: *language_attributes
     _extents:
       <<: *extent_attributes
     _dates:
