Clean up resource and AO read only views; use readonly form helper to retain consistent l&f between forms and readonly views; refactor subject readonly view into a template;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -573,6 +573,7 @@ en:
     role_recipient: Recipient
     role_transmitter: Transmitter
     role_validator: Validator
+    ref: Agent
     _html:
       singular: Agent Link
       plural: Agent Links
