Add Level and Other Level fields to the Archival Object record

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -978,6 +978,19 @@ en:
   archival_object:
     title: Title
     ref_id: Ref ID
+    level: Level
+    level_class: Class
+    level_collection: Collection
+    level_file: File
+    level_fonds: Fonds
+    level_item: Item
+    level_otherlevel: Other Level
+    level_recordgrp: Record Group
+    level_series: Series
+    level_subfonds: Sub-Fonds
+    level_subgrp: Sub-Group
+    level_subseries: Sub-Series
+    other_level: Other Level
     language: Language
     <<: *language_attributes
     "[:resource_id, :ref_id]": Ref ID
@@ -1051,7 +1064,7 @@ en:
     finding_aid_status_completed: Completed
     finding_aid_status_in_progress: In Progress
     finding_aid_status_under_revision: Under Revision
-    finding_aid_status_unprocessed: Unprocessed
+    finding_aid_status_unprocessed:
     finding_aid_note: Note
     language: Language
     <<: *language_attributes
