Use a special set of notes for digital objects and digital object components.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -726,6 +726,10 @@ en:
       label: Label
       type: Type
       content: Content
+    note_digital_object:
+      label: Label
+      content: Content
+      type: Type
     note_bibliography:
       option: Bibliography
       label: Label
