--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1058,7 +1058,7 @@ en:
     finding_aid_description_rules_dacs: "Describing Archives: A Content Standard"
     finding_aid_description_rules_rad: Rules for Archival Description
     finding_aid_description_rules_isadg: International Standard for Archival Description - General
-    finding_aid_language: Languauge
+    finding_aid_language: Language
     finding_aid_sponsor: Sponsor
     finding_aid_edition_statement: Edition Statement
     finding_aid_series_statement: Series Statement
