--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -809,6 +809,7 @@ en:
   external_document: &external_document_attributes
     title: Title
     location: Location
+    publish: Publish?
     _html:
       plural: External Documents
       singular: External Document
