add a non-required ref_id to the subject model

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1093,6 +1093,7 @@ en:
     term_type: Type
   subject:
     terms: Terms
+    ref_id: Subject Heading Identifier
     _terms:
       <<: *term_attributes
     _external_documents:
